// Copyright 2020 Google LLC
//
// Licensed under the Apache License, Version 2.0 (the "License");
// you may not use this file except in compliance with the License.
// You may obtain a copy of the License at
//
//     https://www.apache.org/licenses/LICENSE-2.0
//
// Unless required by applicable law or agreed to in writing, software
// distributed under the License is distributed on an "AS IS" BASIS,
// WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
// See the License for the specific language governing permissions and
// limitations under the License.

syntax = "proto3";

import "google/protobuf/empty.proto";

package reaperconfig;
option go_package = "github.com/googleinterns/cloudai-gcp-test-resource-reaper/reaperconfig";

service ReaperManager {
    rpc AddReaper(ReaperConfig) returns (Reaper) {};
    rpc UpdateReaper(ReaperConfig) returns (Reaper) {};
    rpc DeleteReaper(Reaper) returns (Reaper) {};
    rpc ListRunningReapers(google.protobuf.Empty) returns (ReaperCluster) {};
    rpc StartManager(google.protobuf.Empty) returns (google.protobuf.Empty) {};
    rpc ShutdownManager(google.protobuf.Empty) returns (google.protobuf.Empty) {};
}

message Reaper {
    string uuid = 1;
}

/*
A reaper cluster is for running multiple reapers within the same GKE cluster,
allowing for ease of organization and monitoring of all running reapers.
*/
message ReaperCluster {
    // List of reapers that are running in the GKE cluster.
    repeated Reaper reapers = 1;
}

/*
A reaper config describes all the resources the reaper will monitor, and how
often the reaper should run. Note that any resource that matches the skip
filter will be excluded, even if it matches a name filter in a resource config.
*/
message ReaperConfig {
    // List of resources to watch.
    repeated ResourceConfig resources = 1;

    // Frequency to run reaper in cron time string format.
    string schedule = 2;
        
    // GCP Project ID.
    string project_id = 3;
    
    //  Unique ID of the reaper.
    string uuid = 4;
}

/*
A resource config describes a group of cloud resource and their time to live
(TTL). A resource will be deleted once it has been alive for longer than its
TTL. Note that if a resource is caught by both the the name filter and skip
filter, the resource will be excluded (i.e. not monitored).
*/
message ResourceConfig {
    // Type of GCP resource.
    ResourceType resource_type = 1;

    // Regex of names of resources to include.
    string name_filter = 2;
    
    // Regex of names of resources to exclude. Note that the skip filter wins
    // over a name filter if they both match.
    string skip_filter = 3;
    
    // List of which GCP zones to search.
    repeated string zones = 4;
    
    // Time to live of resources described in cron time string format.
    string ttl = 5;
}

/*
GCP resources that are supported for the reaper to monitor.
*/
enum ResourceType {
    GCE_VM = 0;
    GCS_BUCKET = 1;
    GCS_OBJECT = 2;
    BIGQUERY = 3;
}
